Added Progress bar.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <meta charset="utf-8">
         <title>Video Player</title>
+        <link rel="stylesheet" href="/css/main.css">
+        <script type="text/javascript" src="/js/main.js"></script>
     </head>
     <body onload="init();">
         <header>
@@ -21,5 +23,8 @@
         <button id="play">Play</button>
         <button id="pause">Pause</button>
         <button id="rewind">Rewind Back</button>
+        <p>Current Volume: 0</p>
+         <button id="volUp">Volume Up</button>
+         <button id="volDown">Volume Down</button>        
     </body>
 </html>
