Added Load Status.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <source src="https://vt.media.tumblr.com/tumblr_os685vybSY1vt68ub_480.mp4" type="video/mp4" />
             </video>
         </header>
+        <p id="loadStatus">Load Status: 0%</p>
         <p id="duration"><strong>Time: 0.0</strong></p>
         <p id="currTime"><strong>Current Time: 0.0</strong></p>
         <input type="range" id="slide" value="0">
