Added looping option or not.

--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
         <button id="next">Next Video</button>
         <p id="currVol">Current Volume: 0</p>
         <input type="range" id="vol" value="0">
+        <br>
+        <label>Loop: </label>
+        <input type="checkbox" id="loopOrNot">
     </body>
 </html>
