Fixed bug with load status.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <input type="range" id="vol" value="0">
         <br>
         <label>Loop: </label>
-        <input type="checkbox" id="loopOrNot">
+        <input type="checkbox" id="loopOrNot" checked>
     </body>
 </html>
