--- a/index.html
+++ b/index.html
@@ -6,31 +6,43 @@
         <script type="text/javascript" src="/js/main.js"></script>
     </head>
     <body onload="init();">
-        <header>
-            <video id ="vid" height="500" width="400" autoplay loop preload="auto" poster="http://img.youtube.com/vi/GO_hv-YFGXE/maxresdefault.jpg">
-                <source src="https://vt.media.tumblr.com/tumblr_os685vybSY1vt68ub_480.mp4" type="video/mp4" />
-            </video>
-        </header>
-        <p id="loadStatus">Load Status: 0%</p>
-        <p id="duration"><strong>Time: 0.0</strong></p>
-        <p id="currTime"><strong>Current Time: 0.0</strong></p>
-        <input type="range" id="slide" value="0">
-        <br/>
-        <button id="left">Left</button>
-        <button id="right">Right</button>
-        <button id="up">Up</button>
-        <button id="down">Down</button>
-        <button id="zoomIn">+</button>
-        <button id="zoomOut">-</button>
-        <button id="play">Play</button>
-        <button id="pause">Pause</button>
-        <button id="rewind">Rewind Back</button>
-        <button id="prev">Previous Video</button>
-        <button id="next">Next Video</button>
-        <p id="currVol">Current Volume: 0</p>
-        <input type="range" id="vol" value="0">
-        <br>
-        <label>Loop: </label>
-        <input type="checkbox" id="loopOrNot" checked>
+        <div id="wrapper">
+            <header>
+                <video id ="vid" loop preload="auto" poster>
+                    <source src="https://vt.media.tumblr.com/tumblr_os685vybSY1vt68ub_480.mp4" type="video/mp4" />
+                </video>
+            </header>
+            <section id="controls">
+                <p id="loadStatus">Load Status: 0%</p>
+                <p id="duration"><strong>Time: 0.0</strong></p>
+                <p id="currTime"><strong>Current Time: 0.0</strong></p>
+                <input type="range" id="slide" value="0">
+                <br/>
+
+                <div id="zoomControls">
+                    <button id="zoomIn">+</button>
+                    <button id="zoomOut">-</button>
+                    <div id="zoomMove">
+                        <button id="up">▲</button>
+                        <div id="leftRight">
+                            <button id="left">◄</button>
+                            <button id="right">►</button>
+                        </div>
+                        <button id="down">▼</button>
+                    </div>
+                    <button id="resetZoom">↻</button>
+                </div>
+                <button id="play">Play</button>
+                <button id="pause">Pause</button>
+                <button id="rewind">Rewind Back</button>
+                <button id="prev">Previous Video</button>
+                <button id="next">Next Video</button>
+                <p id="currVol">Current Volume: 0</p>
+                <input type="range" id="vol" value="0">
+                <br>
+                <label>Loop: </label>
+                <input type="checkbox" id="loopOrNot" checked>
+            </section>
+        </div>
     </body>
 </html>
