Added switch for zoom panel.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p id="currTime"><strong>Current Time: 0.0</strong></p>
                 <input type="range" id="slide" value="0">
                 <br/>
-
+                <button id="zoomPanelSwitch">Open Zoom</button>
                 <div id="zoomControls">
                     <button id="zoomIn">+</button>
                     <button id="zoomOut">-</button>
