--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button id="next"><i class="material-icons">skip_next</i></button>
                     <button id="rewind"><i class="material-icons">replay</i></button>
                     <div id="volumeControls">
-                        <p>🔊</p>
+                        <p id="volShow"><i class="material-icons">volume_up</i></p>
                         <input class="volSlider" type="range" id="vol" value="0">
                         <p id="currVol">0%</p>
                     </div>
