Fixed bug the main slider track being placed in the middle.

--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@
                     <button id="next"><i class="material-icons">skip_next</i></button>
                     <button id="rewind"><i class="material-icons">replay</i></button>
                     <div id="volumeControls">
-                        <p id="volShow"><i class="material-icons">volume_up</i></p>
+                        <p id="volShow"><i class="material-icons">volume_off</i></p>
                         <input class="volSlider" type="range" id="vol" value="0">
                         <p id="currVol">0%</p>
                     </div>
                     <p ><span id="currTime">0.0</span>/<span id="duration">0.0</span></p>
                 </div>
-                <!---
+
                 <label>Loop: </label>
                 <input type="checkbox" id="loopOrNot" checked>
-                !-->
             </section>
         </div>
     </body>
