Fixed bugs with pause and play.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body onload="init();">
         <div id="wrapper">
             <header>
-                <video id ="vid" loop preload="auto" poster>
+                <video id ="vid" autoplay loop preload="auto" poster>
                     <source src="https://vt.media.tumblr.com/tumblr_os685vybSY1vt68ub_480.mp4" type="video/mp4" />
                 </video>
             </header>
