--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         </div>
                     </div>
                     <div id="lastPanel">
-                        <button id="zoomPanelSwitch"><i class="material-icons">all_out</i></button>
+                        <button id="zoomPanelSwitch"><i class="material-icons">search</i></button>
                         <div id="zoomControls">
-                            <button id="zoomIn">+</button>
-                            <button id="zoomOut">-</button>
+                            <button id="zoomIn"><i class="material-icons">zoom_in</i></button>
+                            <button id="zoomOut"><i class="material-icons">zoom_out</i></button>
                             <div id="zoomMove">
                                 <button id="up">▲</button>
                                 <div id="leftRight">
@@ -44,7 +44,7 @@
                                 </div>
                                 <button id="down">▼</button>
                             </div>
-                            <button id="resetZoom">↻</button>
+                            <button id="resetZoom"><i class="material-icons">replay</i></button>
                         </div>
                         <p ><span id="currTime">0.0</span>/<span id="duration">0.0</span></p>
                     </div>
