Changed icons for the elements in Zoom Panel.

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                             <button id="zoomIn"><i class="material-icons">zoom_in</i></button>
                             <button id="zoomOut"><i class="material-icons">zoom_out</i></button>
                             <div id="zoomMove">
-                                <button id="up">▲</button>
+                                <button id="up"><i class="material-icons">arrow_upward</i></button>
+                                <button id="down"><i class="material-icons">arrow_downward</i></button>
                                 <div id="leftRight">
-                                    <button id="left">◄</button>
-                                    <button id="right">►</button>
+                                    <button id="left"><i class="material-icons">arrow_back</i></button>
+                                    <button id="right"><i class="material-icons">arrow_forward</i></button>
                                 </div>
-                                <button id="down">▼</button>
                             </div>
                             <button id="resetZoom"><i class="material-icons">replay</i></button>
                         </div>
