Fixed the controls not viewing properly in Firefox.

--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
                 <div id="secLevelControls">
                     <div id="firstPanel">
                         <div id="playPauseControls">
-                            <button id="prev"><i class="material-icons">skip_previous</i></button>
-                            <button id="playPause"><i class="material-icons">play_circle_filled</i></button>
-                            <button id="next"><i class="material-icons">skip_next</i></button>
-                            <button id="rewind"><i class="material-icons">replay</i></button>
-                            <button id="loopOrNot"><i class="material-icons">repeat</i></button>
+                            <button id="prev"><i class="matIcons">skip_previous</i></button>
+                            <button id="playPause"><i class="matIcons">play_circle_filled</i></button>
+                            <button id="next"><i class="matIcons">skip_next</i></button>
+                            <button id="rewind"><i class="matIcons">replay</i></button>
+                            <button id="loopOrNot"><i class="matIcons">repeat</i></button>
                         </div>
                         <div id="volumeControls">
-                            <p id="volShow"><i class="material-icons">volume_off</i></p>
+                            <p id="volShow"><i class="matIcons">volume_off</i></p>
                             <input class="volSlider" type="range" id="vol" value="0">
                             <p id="currVol">0%</p>
                         </div>
                     </div>
                     <div id="lastPanel">
-                        <button id="zoomPanelSwitch"><i class="material-icons">search</i></button>
+                        <button id="zoomPanelSwitch"><i class="matIcons">search</i></button>
                         <div id="zoomControls">
-                            <button id="zoomIn"><i class="material-icons">zoom_in</i></button>
-                            <button id="zoomOut"><i class="material-icons">zoom_out</i></button>
+                            <button id="zoomIn"><i class="matIcons">zoom_in</i></button>
+                            <button id="zoomOut"><i class="matIcons">zoom_out</i></button>
                             <div id="zoomMove">
-                                <button id="up"><i class="material-icons">arrow_upward</i></button>
-                                <button id="down"><i class="material-icons">arrow_downward</i></button>
+                                <button id="up"><i class="matIcons">arrow_upward</i></button>
+                                <button id="down"><i class="matIcons">arrow_downward</i></button>
                                 <div id="leftRight">
-                                    <button id="left"><i class="material-icons">arrow_back</i></button>
-                                    <button id="right"><i class="material-icons">arrow_forward</i></button>
+                                    <button id="left"><i class="matIcons">arrow_back</i></button>
+                                    <button id="right"><i class="matIcons">arrow_forward</i></button>
                                 </div>
                             </div>
-                            <button id="resetZoom"><i class="material-icons">replay</i></button>
+                            <button id="resetZoom"><i class="matIcons">replay</i></button>
                         </div>
                         <p ><span id="currTime">0.0</span>/<span id="duration">0.0</span></p>
                     </div>
