Added a custom context menu.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <title>Video Player</title>
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="/js/main.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto" rel="stylesheet">
     </head>
@@ -51,5 +52,14 @@
                 </div>
             </section>
         </div>
+        <!-- OUR CONTEXT MENU !-->
+        <nav class="hide" id="conMenu">
+           <ul>
+                <li><a href="https://github.com/itskhaledmohammad/foo_html5_player" target="_blank">View on Github <i class="fa fa-github" style="color: black;" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/itskhaledmd" target="_blank">Follow on Twitter <i class="fa fa-twitter" aria-hidden="true" style="color: #3B5998;"></i></a></li>
+                <li><a href="https://www.facebook.com/itskhaledmohammad" target="_blank">Made With Love by Khaled Mohammad <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i></a></li>
+           </ul>
+        </nav>
+       </div>
     </body>
 </html>
