Added a new video, just for the fun.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </video>
             </header>
             <section id="controls">
-                <!---<p id="loadStatus">Load Status: 0%</p>!-->
+                <!-- <p id="loadStatus">Load Status: 0%</p> !-->
                 <input class="mainSlider" type="range" id="slide" value="0">
                 <div id="secLevelControls">
                     <div id="firstPanel">
