Fixed the url issues.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>Video Player</title>
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="./css/main.css">
+        <script type="text/javascript" src="./js/main.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script type="text/javascript" src="/js/main.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto" rel="stylesheet">
     </head>
     <body onload="init();">
