--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <li><a href="https://github.com/itskhaledmohammad/foo_html5_player" target="_blank">View on Github <i class="fa fa-github" style="color: black;" aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/itskhaledmd" target="_blank">Follow on Twitter <i class="fa fa-twitter" aria-hidden="true" style="color: #3B5998;"></i></a></li>
                 <li><a href="https://www.facebook.com/itskhaledmohammad" target="_blank">Made With Love by Khaled Mohammad <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i></a></li>
+                <div id="urlBox"><label for="vidUrl">URL: </label><input type="text" name="vidUrl" id="vidUrl"><button><i class="matIcons">done</i></button></div>
            </ul>
         </nav>
        </div>
