Fixed issue with mobile view scaling.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="A HTML5 Video Player.">
         <title>Foo HTML5 Player</title>
         <link rel="stylesheet" href="./css/main.css">
         <script type="text/javascript" src="./js/main.js"></script>
